escaped characters fix. error message animation for the textarea. Overflow of old tweets fix.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width:100%;
   height: 200px;
   padding: 5px 20px;
@@ -39,8 +40,8 @@ textarea {
 }
 
 .new-tweet button i {
-    padding-right: 5px;
-    color: rgb(13, 87, 76);
+  padding-right: 5px;
+  color: rgb(13, 87, 76);
 }
 .new-tweet output {
   color: rgb(7, 62, 52);
@@ -48,12 +49,25 @@ textarea {
 .new-tweet .red-counter {
   color:crimson;
 }
+
+.error {
+  color: crimson; 
+  display: none;
+  width: 90%;
+  height: 15%;
+  margin: 0;
+  padding: 0;
+  font-size: 3vh;
+  align-items: flex-start;
+  justify-content: center;
+}
 /* ------------------------- Hover Animation ----------------------------- */
 
 .new-tweet button:hover {
   color:rgb(13, 117, 76); 
   background-color: rgb(20, 175, 122);
 }
+
 
 /* .new-tweet button i:hover {
     padding-right: 5px;
