--- a/public/styles/old-tweet.css
+++ b/public/styles/old-tweet.css
@@ -58,6 +58,12 @@
   width: 90%;
   height: 45%;
 }
+.old-tweet .content textarea {
+  resize:vertical;
+  overflow: auto;
+  padding : 15px 0;
+  margin  : 0;
+}
 
 .old-tweet footer {
   display: flex; 
